gateway/kubernetes/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: mp3converter.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
#####################################################################################

# Enable ingress in Minikube to tunnel localhost to the Kubernetes cluster
# $ minikube addons enable ingress
# $ minikube tunnel

# Map localhost to mp3converter.com in local computer
# $ sudo nano /etc/hosts
# Add the following line: 127.0.0.1 mp3converter.com

#####################################################################################
